# phloem

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
collenchyma/: index.html  sidebar-items.js
collenchyma/backend/: index.html  struct.Backend.html  struct.BackendConfig.html  trait.IBackend.html
collenchyma/binary/: index.html  trait.IBinary.html
collenchyma/device/: enum.DeviceType.html  index.html  sidebar-items.js  trait.IDevice.html
collenchyma/error/: enum.Error.html  index.html
collenchyma/framework/: enum.Error.html  index.html  trait.IFramework.html
collenchyma/frameworks/: index.html
collenchyma/hardware/: enum.HardwareType.html  index.html  trait.IHardware.html
collenchyma/libraries/: enum.Error.html  index.html  sidebar-items.js  trait.Float.html
collenchyma/memory/: enum.MemoryType.html  index.html  trait.IMemory.html
collenchyma/operation/: index.html  trait.IOperation.html
collenchyma/shared_memory/: enum.Error.html  index.html  sidebar-items.js  struct.SharedMemory.html
num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
phloem/: index.html  sidebar-items.js
phloem/blob/: index.html  sidebar-items.js  struct.Blob.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
rblas/: index.html  macro.mat!.html
rblas/default/: index.html  trait.Default.html
rblas/math/: enum.Marker.html  enum.Trans.html  index.html
rblas/matrix/: index.html  trait.BandMatrix.html  trait.Matrix.html
rblas/matrix_vector/: index.html
rblas/vector/: index.html  trait.Vector.html  trait.VectorOperations.html
rustc_serialize/json/: struct.Parser.html
src/: blob.rs  lib.rs  numeric.rs
src/collenchyma/: backend.rs.html  binary.rs.html  device.rs.html  error.rs.html  (+6 more)
tests/: blob_spec.rs
(+372 files in other folders)
