[package]
name = "phloem"
description = "Blob for Machine Learning"
version = "0.2.3"
authors = ["Michael Hirn <mj@autumnai.com>"]
repository = "https://github.com/autumnai/phloem"
homepage = "https://github.com/autumnai/phloem"
documentation = "http://autumnai.github.io/phloem"
readme = "README.md"
keywords = ["machine-learning", "neural-network", "blob", "data"]
license = "MIT"

[dependencies]
clippy = "0.0.22"

[features]
default = []
dev = [] # possibly for clippy
