[package]
name          = "phloem"
description   = "CPU/GPU Data Blob for Machine Learning"
version       = "0.2.4"
authors       = ["Michael Hirn <mj@autumnai.com>"]

repository    = "https://github.com/autumnai/phloem"
homepage      = "https://github.com/autumnai/phloem"
documentation = "http://autumnai.github.io/phloem"
readme        = "README.md"

keywords      = ["machine-learning", "neural-network", "blob", "data"]
license       = "MIT"

[dependencies]
clippy = "0.0.23"
# arrayfire = {git = "https://github.com/arrayfire/arrayfire-rust", rev = "39f9632"}

[features]
default = []
dev = [] # possibly for clippy
