[package]
name          = "phloem"
description   = "CPU/GPU Data Blob for Machine Learning"
version       = "0.3.1"
authors       = ["Michael Hirn <mj@autumnai.com>"]

repository    = "https://github.com/autumnai/phloem"
homepage      = "https://github.com/autumnai/phloem"
documentation = "http://autumnai.github.io/phloem"
readme        = "README.md"

keywords      = ["machine-learning", "neural-network", "blob", "data"]
license       = "MIT"

[dependencies]
collenchyma = "= 0.0.3"

clippy = { version = "0.0.23", optional = true }

[features]
default = []
dev = []
lint = ["clippy"]
